--- a/PhD_Portal/vercel.json
+++ b/PhD_Portal/vercel.json
@@ -1,5 +1,11 @@
+
+
+
 {
     "rewrites": [
-      { "source": "/(.*)", "destination": "/" }
+    {
+    "source": "/(.*)",
+    "destination": "/index.html"
+    }
     ]
 }
